# Emerging-Optimizers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  codecov.yml  mypy.ini  pyproject.toml
.claude/skills/l0-test/: SKILL.md
.github/actions/test-template/: action.yml
.github/workflows/: _build_container.yml  build-docs.yml  build-test-publish-wheel.yml  cherry-pick-release-commit.yml  cicd-main.yml  code-linting.yml  copyright-check.yml  release-docs.yml  release-freeze.yml  release.yaml  secrets-detector.yml
.github/workflows/config/: .secrets.baseline
benchmarks/: common.py  netwon_schulz_benchmark.py  newton_schulz_benchmark.py  soap_benchmark.py
docker/: Dockerfile.ci
docs/: conf.py  documentation.md  index.md  index.rst  orthogonalized-optimizers.md  orthogonalized_optimizers.rst  project.json  utils.rst  versions1.json
docs/apidocs/: index.md  mixin.md  orthogonalized-optimizers.md  psgd.md  riemannian-optimizers.md  scalar-optimizers.md  soap.md  utils.md
docs/primer/: epsilon.md  index.md  layerwise-distributed-optimizer.md
docs/primer/gradient_spike/: index.md  optimizer-update-comparison.md  preconditioner-eigenbasis-spike.md  tf32-eigval-precision-loss.md
emerging_optimizers/: __init__.py  mixin.py  package_info.py  registry.py
emerging_optimizers/contrib/: muown.py  row_norm.py
emerging_optimizers/orthogonalized_optimizers/: __init__.py  adaptive_muon.py  adaptive_orthogonalized_optimizer.py  mop.py  muon.py  muon_hyperball.py  muon_utils.py  muown.py  orthogonalized_optimizer.py  polargrad.py  row_norm.py  scion.py  sinkhorn_muon.py  spectral_clipping_utils.py  spectron.py  spel.py  tensor_parallel_muon.py
emerging_optimizers/psgd/: procrustes_step.py  psgd.py  psgd_kron_contractions.py  psgd_utils.py
emerging_optimizers/riemannian_optimizers/: normalized_optimizer.py
emerging_optimizers/scalar_optimizers/: __init__.py  adam.py  ademamix.py  base.py  laprop.py  lion.py  signum.py  update_fns.py
emerging_optimizers/scalar_optimizers/update_fns/: __init__.py  calculate_ademamix_update.py  calculate_lion_update.py  calculate_sim_ademamix_update.py
emerging_optimizers/scalar_optimizers/update_functions/: __init__.py  adam.py  ademamix.py  laprop.py  lion.py  madam.py  rmsprop.py  signum.py
emerging_optimizers/soap/: __init__.py  blocked_soap.py  moso.py  rekls.py  rske.py  sh_muon.py  soap.py  soap_utils.py  stacked_soap.py  tp_rekls.py  tp_utils.py
emerging_optimizers/triton_kernels/: __init__.py  syrk.py
emerging_optimizers/utils/: __init__.py  eig.py  modules.py  precondition_schedules.py  sinkhorn_mapper.py
emerging_optimizers/weight_update_hooks/: __init__.py  base.py  hyperball.py  radial_brake.py
examples/: multi_stream_qr.py  polar.py  soap_benchmark.py  stacked_soap_grouped_linear.py
examples/gradient_spike/: optimizer-update-comparison.ipynb  preconditioner-eigenbasis-spike.ipynb  tf32-eigval-precision-loss.ipynb
llm_shower/: __init__.py  package_info.py
tests/: _comparison.py  muown_reference.py  normalized_optimizer_convergence_test.py  soap_mnist_test.py  soap_reference.py  soap_smoke_test.py  test_adaptive_muon.py  test_adaptive_orthogonalized_optimizer.py  test_blocked_soap.py  test_distributed_muon_utils_cpu.py  test_distributed_rekls_cpu.py  test_distributed_soap_utils_cpu.py  test_eig_utils.py  test_laprop.py  test_lion.py  test_mixin.py  test_moso.py  test_muon_utils.py  test_muon_utils_tp_cpu.py  test_muown.py  test_normalized_optimizer.py  test_optional_triton.py  test_orthogonalized_optimizer.py  test_polargrad.py  test_procrustes_step.py  test_psgd_contractions.py  test_psgd_convergence.py  test_psgd_pro.py  test_psgd_utils.py  test_registry.py  test_row_norm.py  test_scalar_optimizers.py  test_sh_muon.py  test_sinkhorn.py  test_soap.py  test_soap_functions.py  test_soap_utils.py  test_spectral_clip_utils.py  test_spectral_clipping_utils.py  test_spectron.py  (+6 more)
tests/ci/: L0_Tests_CPU.sh  L0_Tests_GPU.sh  L1_Tests_GPU.sh
tests/contrib/: test_muown.py
tests/convergence/: moe_c4_convergence.py  normalized_optimizer_test.py  psgd_convergence_test.py  soap_mnist_test.py
tests/unit_tests/: L0_Unit_Tests_CPU.sh
